# toki_pona_typing_game

./: .gitignore  .gitmodules  Cargo.toml  build.rs
res/: tokipona.txt  words.toml  words.toml.bz2
res/sona-0.2.3/words/metadata/: uta.toml
src/: main.rs
src/res/: words.toml  words.toml.bz2
