[package]
name = "tt"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
toml = "0.8.12"

[dependencies]
crossterm = "0.27.0"
directories = "5.0.1"
rand = "0.8.5"
ratatui = "0.24.0"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
