[package]
name = "tt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"

[build-dependencies]
toml = "0.8.12"
bzip2 = "0.4.4"

[dependencies]
bzip2 = "0.4.4"
crossterm = "0.27.0"
directories = "5.0.1"
rand = "0.8.5"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
