[package]
name = "tt"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["compressed"]
compressed = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"

[build-dependencies]
toml = "0.9.8"
bzip2 = "0.6.1"

[dependencies]
bzip2 = "0.6.1"
directories = "6.0.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
